Update Page Object framework for My Shop
- update properties and dependencies versions (Selenium and Java)
- update framework methods to be compatibile to new Selenium version